[tool.poetry]
name = "remme-client-python"
version = "0.1.0-alpha"
description = "Python Interface for Distributed Public Key Infrastructure (PKI) protocol"
license = "Apache-2.0"
authors = ["REMME"]
readme = "README.md"
homepage = "https://remme.io/"
repository = "https://github.com/Remmeauth/remme-client-python"
documentation = "https://docs.remme.io/"

[tool.poetry.dependencies]
python = "^3.6"

sawtooth-signing = "1.0.1"
aiohttp = "3.2.1"
